04.endpoints.yaml
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: "pihole-service" 
  namespace: pihole
subsets: 
    -
      addresses:
        -
          ip: "10.9.5.2" 
      ports:
        -
          port: 8080
          name: "http"
