02.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
spec:
  rules:
    - host: pi.hole
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "pihole-service"
                port:
                  number: 80
